@@ -1,2 +1,3 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2004/07/08 16:19:37 xtraeme Exp $
+@comment $NetBSD: PLIST,v 1.2 2004/07/23 13:03:56 xtraeme Exp $
 bin/wimon
+man/man8/wimon.8
