@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.1.1.1 2004/07/08 16:19:37 xtraeme Exp $
+$NetBSD: distinfo,v 1.2 2004/07/23 13:03:56 xtraeme Exp $
 
-SHA1 (wimon-0.2.tar.gz) = 67f19e3cddfa856e7bb5ec480f133791147638b7
-Size (wimon-0.2.tar.gz) = 5605 bytes
+SHA1 (wimon-0.3.tar.gz) = 8be1bc6d4917adee5641310258fe77f8b265013f
+Size (wimon-0.3.tar.gz) = 8103 bytes
